[Aditya] - Resolved CSS jumping for Reset & Forgot password page

--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -14,7 +14,7 @@
       .email,
       .password {
         width: 100%;
-        padding: 0.5rem 0;
+        padding: 0.4rem 0;
         .input-box {
           @include inputBox;
         }
